<resources>
    <string name="app_name">Weather</string>
    <string name="date">Date</string>
    <string name="main">Main</string>
    <string name="description">Description</string>
    <string name="city_exz">Kazan</string>
    <string name="temp_exz">+7</string>
    <string name="temp">Temperature</string>
    <string name="press">Pressure</string>
    <string name="humid">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="min_max_temps">Min - Max Temp</string>
    <string name="celsius_format">%1$d°C</string>
    <string name="pressure_format">%1$s mm Hg</string>
    <string name="wind_format">%1$s m/s</string>
    <string name="humidity_format">%1$s%%</string>
    <string name="error_loading_message">Не удалось загрузить погоду</string>
    <string name="reload">Повторить попытку</string>
    <string name="network_error">Network error</string>
    <string name="network_error_message">При загрузке произошла ошибка, проверьте подключение к
        интернету
    </string>
    <string name="loading">Loading…</string>
    <string name="empty_weather">Your weather list is empty</string>
</resources>