<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/windowBackground"
    card_view:cardElevation="@dimen/card_elevation_small"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/date"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_5">

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                tools:src="@drawable/d01" />

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lines="1"
                android:text="@string/description"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_20"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_temp"
                android:layout_width="@dimen/size_30"
                android:layout_height="@dimen/size_30"
                android:layout_marginEnd="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:background="@drawable/temperature" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_weight="1"
                android:text="@string/temp"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/temp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_press"
                android:layout_width="@dimen/size_30"
                android:layout_height="@dimen/size_30"
                android:layout_marginEnd="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:background="@drawable/pressure" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/press"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/pressure_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:text="@string/press"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_humidity"
                android:layout_width="@dimen/size_30"
                android:layout_height="@dimen/size_30"
                android:layout_marginEnd="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:background="@drawable/humidity" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_weight="1"
                android:text="@string/humid"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/humidity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humid"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_w_speed"
                android:layout_width="@dimen/size_30"
                android:layout_height="@dimen/size_30"
                android:layout_marginEnd="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:background="@drawable/wind_speed" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wind_speed"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/wind_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:text="@string/wind_speed"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>